created head line

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="head-line">
+            <ul class="nav-list">
+                <li>
+                    <img class="instalogo" src="assets/img/kisspng-letter-instagram-font-clip-art-portable-network-gr-instagram-una-red-social-imprescindible-para-tu-5b8982701f7eb2.402110881535738480129.png" alt="">
+                </li>
+                <li>
+                    <input class="search-bar" type="text" placeholder="Search">
+                </li>
+                <li>
+                    <button class="log-in">Log in</button>
+                    <a class="sign-up" href="#">Sign up</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
